fix align

--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,7 @@ h2 {
   cursor: pointer;
   width: 10rem;
   height: 10rem;
-  margin-left: 42%;
+  margin-left: 46%;
 }
 a {
   text-decoration: inherit;
